# SeetaFace2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  English readme.md  LICENSE  README.md  README_en.md  SeetaFace.pc.in  appveyor.yml  build_android.sh  vcpkg.json
FaceDetector/: CMakeLists.txt
FaceDetector/FaceDetector/: CMakeLists.txt
FaceDetector/FaceDetector/include/seeta/: FaceDetector.h
FaceDetector/FaceDetector/jni/: Android.mk
FaceDetector/FaceDetector/seeta/: FaceDetectorPrivate.cpp
FaceDetector/FaceDetector/src/seeta/: FaceDetector.cpp
FaceDetector/cmake/: LOCAL_ENV.cmake
FaceDetector/include/seeta/: CFaceInfo.h  CStruct.h  FaceDetector.h
FaceDetector/jni/: Android.mk
FaceDetector/seeta/: CommonStruct.h  FaceDetectorPrivate.cpp  FaceDetectorPrivate.h  ImageProcess.cpp  SeetaFaceDetectorConfig.h  common_alignment.cpp  common_alignment.h  graphics2d.h
FaceDetector/src/seeta/: FaceDetector.cpp
FaceLandmarker/: CMakeLists.txt  SeetaFaceLandmarker.pc.in
FaceLandmarker/FaceLandmarker/: CMakeLists.txt
FaceLandmarker/FaceLandmarker/jni/: Android.mk
FaceLandmarker/FaceLandmarker/seeta/: FaceLandmarkerPrivate.cpp  SeetaFaceLandmarkerConfig.h.in  common_alignment.h
FaceLandmarker/FaceLandmarker/src/seeta/: FaceLandmarker.cpp
FaceLandmarker/include/seeta/: CStruct.h  FaceLandmarker.h  Struct.h
FaceLandmarker/jni/: Android.mk
FaceLandmarker/seeta/: FaceLandmarkerPrivate.cpp  FaceLandmarkerPrivate.h  ImageProcess.cpp  ImageProcess.h  SeetaFaceLandmarkerConfig.h
FaceLandmarker/src/seeta/: FaceLandmarker.cpp
FaceRecognizer/: CMakeLists.txt  FaceRecognizer.pc.in
FaceRecognizer/FaceRecognizer/: CMakeLists.txt
FaceRecognizer/FaceRecognizer/jni/: Android.mk  Application.mk
FaceRecognizer/FaceRecognizer/seeta/: CFaceInfo.h  FaceRecognizerPrivate.cpp  FaceRecognizerPrivate.h  ImageProcess.cpp  Mutex.h  SeetaModelHeader.h  SeetaNetParseProto.cpp  graphics2d.h
FaceRecognizer/include/seeta/: CStream.h  FaceDatabase.h  FaceRecognizer.h  Stream.h  Struct.h
FaceRecognizer/jni/: Android.mk
FaceRecognizer/seeta/: DataHelper.h  FaceRecognizerPrivate.cpp  FaceRecognizerPrivate.h  ImageProcess.h  Mutex.h  SeetaFaceRecognizerConfig.h  SeetaFaceRecognizerConfig.h.in  SeetaModelHeader.h  SeetaNetParseProto.cpp  common_alignment.h  graphics2d.cpp
FaceRecognizer/src/seeta/: FaceDatabase.cpp  FaceRecognizer.cpp
FaceTracker/: CMakeLists.txt  FaceTracker.pc.in
FaceTracker/include/seeta/: CStruct.h  CTrackingFaceInfo.h  FaceTracker.h  (+1 more)
QualityAssessor/: CMakeLists.txt  QualityAssessor.pc.in
QualityAssessor/include/seeta/: CStruct.h  QualityAssessor.h  Struct.h
QualityAssessor/seeta/: ImageProcess.cpp  common_alignment.cpp
QualityAssessor/src/: ClarityQuality.cpp  ClarityQuality.h  PoseQuality.cpp  PoseQuality.h  QualityAssessor.cpp
SeetaNet/: CMakeLists.txt  SeetaNet.pc.in  readme.txt
SeetaNet/include/: SeetaNetForward.h  SeetaNetStruct.h
SeetaNet/sources/: CMakeLists.txt
SeetaNet/sources/include/: SeetaNetForward.h
SeetaNet/sources/jni/: Android.mk  Application.mk
SeetaNet/sources/src/: ReadFromSeetaNetLayer.cpp  SeetaNetIm2Col.cpp  SeetaNetMathCPU.cpp  SeetaNetParseProto.cpp  SeetaNetProto.cpp
SeetaNet/sources/src/include_inner/: ReadFromSeetaNetLayer.h  SeetaNetBlobCpu.h  SeetaNetCommon.h  SeetaNetCreateLayerDetailCPU.h  SeetaNetHypeShape.h  SeetaNetIm2Col.h  SeetaNetLayerType.h  SeetaNetMacro.h  SeetaNetMathCPU.h  SeetaNetProto.h
SeetaNet/sources/src/include_inner/layers/: SeetaNetBatchNormalizeCPU.h  SeetaNetEltwiseCPU.h  SeetaNetMemoryDataLayerCPU.h  SeetaNetPoolingCPU.h  SeetaNetPowerCPU.h  SeetaNetRealMulCPU.h
SeetaNet/sources/src/orz/mem/: pot.h  vat.h
SeetaNet/sources/src/orz/sync/: cartridge.h
SeetaNet/sources/src/orz/tools/: box.h  memory_stream.h  void_bind.h
SeetaNet/src/: ReadFromSeetaNetLayer.cpp  SeetaNet.cpp  SeetaNetForward.cpp  SeetaNetIm2Col.cpp  SeetaNetMathCPU.cpp  SeetaNetParseProto.cpp  SeetaNetProto.cpp
SeetaNet/src/include_inner/: ReadFromSeetaNetLayer.h  SeetaNet.h  SeetaNetBlobCpu.h  SeetaNetCommon.h  SeetaNetCommonfuction.h  SeetaNetCreateLayerDetailCPU.h  SeetaNetCreateLayerMapCPU.h  SeetaNetFeatureMap.h  SeetaNetHypeShape.h  SeetaNetIm2Col.h  SeetaNetLayerType.h  SeetaNetMacro.h  SeetaNetMathCPU.h  SeetaNetMemoryModel.h  SeetaNetParseProto.h  SeetaNetProto.h  SeetaNetResource.h  SeetaNetSimd.h
SeetaNet/src/include_inner/layers/: SeetaNetBaseLayer.h  SeetaNetBatchNormalizeCPU.h  SeetaNetBatchToSpaceNDCPU.h  SeetaNetConcatCPU.h  SeetaNetConvolutionCPU.h  SeetaNetCropCPU.h  SeetaNetDeconvolutionCPU.h  SeetaNetEltwiseCPU.h  SeetaNetExpCPU.h  SeetaNetInnerproductCPU.h  SeetaNetMemoryDataLayerCPU.h  SeetaNetPoolingCPU.h  SeetaNetPowerCPU.h  SeetaNetPreReluCPU.h  SeetaNetRealMulCPU.h  SeetaNetReluCPU.h  SeetaNetReshapeCPU.h  SeetaNetScaleCPU.h  SeetaNetShapeIndexPatchCPU.h  SeetaNetSigmoidCPU.h  SeetaNetSoftmaxCPU.h  SeetaNetSpaceToBatchNDCPU.h  SeetaNetSplitCPU.h
SeetaNet/src/orz/mem/: pot.cpp  pot.h  vat.cpp  vat.h
SeetaNet/src/orz/sync/: canyon.cpp  canyon.h  cartridge.cpp  cartridge.h  shotgun.cpp  shotgun.h
SeetaNet/src/orz/tools/: box.cpp  box.h  ctxmgr_lite.h  ctxmgr_lite_support.h  void_bind.h
ci/: build-install-tools-windows.sh  build-install-tools.sh  build.sh
cmake/: SeetaFaceConfig.cmake
craft/linux/: build.linux.x64.sh
craft/windows/: build.win.x64.cmd  build.win.x64.debug.cmd
example/: CMakeLists.txt
example/SeetaExample/: SeetaExample.sln
example/crop_face/: CMakeLists.txt  example.cpp
example/points81/: CMakeLists.txt  Makefile  UserTemplate.xml  example.cpp  points81.vcxproj  run.sh
example/points81/seeta/: Struct_cv.h
example/props/: OpenCV2.props  OpenCV3.props  SeetaFaceDetector.props  SeetaFaceLandmarker.props  SeetaFaceRecognizer.props  SeetaNet.props
example/search/: CMakeLists.txt  Makefile  UserTemplate.xml  example.cpp  run.sh  search.vcxproj  search.vcxproj.filters
example/search/seeta/: FaceEngine.h  Struct_cv.h
example/tracking/: CMakeLists.txt  example.cpp
example/tracking/seeta/: Struct_cv.h
ios/: cmake.sh  iOS.cmake
(+5 files in other folders)
